dist_man1_MANS = \
	match.1 \
	match-create.1 \
	matchd.1 \
	match-del_rule.1 \
	match-destroy.1 \
	match-get_actions.1 \
	match-get_rules.1 \
	match-get_graph.1 \
	match-get_header_graph.1 \
	match-get_headers.1 \
	match-get_ports.1 \
	match-get_tables.1 \
	match-lport_lookup.1 \
	match-phys_port_lookup.1 \
	match-set_port.1 \
	match-set_rule.1 \
	match-update.1
